--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,22 @@
         android:label="@string/HabitTracker"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HabitTracker"
+
+        android:theme="@style/AppTheme"
         tools:targetApi="34">
         <activity
             android:name=".MainWindow"
             android:exported="true"
             android:label="@string/HabitTracker">
-            android:theme="@style/Theme.HabitTracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".AddHabit"
-            android:label="Planning Window">
-        </activity>
+<!--        <activity android:name=".AddHabit"-->
+<!--            android:label="Planning Window">-->
+<!--        </activity>-->
 
     </application>
 
