--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,8 +26,16 @@
         </activity>
 
         <activity android:name=".AddHabit"
-            android:label="Planning Window">
+            android:label="Adding Habits">
         </activity>
+
+<!--   eventually more activities     -->
+<!--        <activity android:name=".AddHabit"-->
+<!--            android:label="Adding Habits">-->
+<!--        </activity>-->
+
+
+        <service android:name=".Services" />
 
     </application>
 
