--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/HabitTracker"
+        android:label="@string/HabitTrackerTitle"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
 
@@ -18,7 +18,7 @@
         <activity
             android:name=".MainWindow"
             android:exported="true"
-            android:label="@string/HabitTracker">
+            android:label="@string/HabitTrackerTitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
