Setup alarm to reset habit status based on frequency
🐒 not my problem it doesn't wanna work 🤡

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,15 @@
 
         <service android:name=".Services" />
 
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.habittracker.ALARM_TRIGGERED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
